Improved front page

--- a/config.toml
+++ b/config.toml
@@ -16,3 +16,4 @@ highlight_code = true
 # Put all your custom variables here
 pagename = "ΤΙΠΟΤΑ"
 whatsmyname = "Stefanos Carlström"
+whatsmytitle = "PhD in Atomic Physics"
