--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: Build and deploy
-        uses: shalzz/zola-deploy-action@v0.17.2
+        uses: shalzz/zola-deploy-action@master
         env:
           BUILD_ONLY: ${{ github.ref != 'refs/heads/master' }}
           BUILD_FLAGS: "${{ github.ref != 'refs/heads/master' && '--drafts' || ''}}"
